SUBDIRS = man doc Win32 MacOS Octave src examples tests
DIST_SUBDIRS = $(SUBDIRS)
EXTRA_DIST = reconf acinclude.m4 libsndfile.spec.in sndfile.pc.in \
			check_libsndfile.py libsndfile_version_convert.py Make.bat
			
			 
pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = sndfile.pc

m4datadir = $(datadir)/aclocal

