THEMES= \
	suv \
	bluedottheme \
	defaulttheme

SUBDIRS= \
	$(THEMES) \
	libfourier \
	colors \
	libeffecttv \
	1080to540 \
	720to480 \
	aging \
	bandslide \
	bandwipe \
	blur \
	brightness \
	burn \
	chromakey \
	chromakeyhsv \
	colorbalance \
	compressor \
	crossfade \
	decimate \
	deinterlace \
	delayaudio \
	delayvideo \
	denoise \
	denoisefft \
	denoiseseltempavg \
	denoisevideo \
	despike \
	diffkey \
	dissolve \
	dot \
	downsample \
	fieldframe \
	flash \
	flip \
	framefield \
	freeverb \
	freezeframe \
	gain \
	gamma \
	gradient \
	histogram \
	holo \
	huesaturation \
	interpolate \
	interpolatevideo \
	invertaudio \
	invertvideo \
	irissquare \
	ivtc \
	level \
	linearblur \
	livevideo \
	loopaudio \
	loopvideo \
	motion \
	motionblur \
	normalize \
	oilpainting \
	overlay \
	overlayaudio \
	parametric \
	perspective \
	pitch \
	polar \
	radialblur \
	reframe \
	reframert \
	reroute \
	resample \
	reverb \
	reverseaudio \
	reversevideo \
	rgb601 \
	rotate \
	scale \
	shapewipe \
	sharpen \
	shiftinterlace \
	slide \
	spectrogram \
	swapchannels \
	synthesizer \
	threshold \
	timeavg \
	timefront \
	timestretch \
	titler \
	translate \
	unsharp \
	videoscope \
	wave \
	whirl \
	wipe \
	yuv \
	zoomblur \
	fonts

AUTOMAKE_OPTIONS=foreign

EXTRA_DIST = 
