THEMES= \
	suv \
	bluedottheme \
	defaulttheme

SUBDIRS= \
	$(THEMES) \
	libfourier \
	libeffecttv \
	1080to540 \
	720to480 \
	C41 \
	aging \
	bandslide \
	bandwipe \
	blur \
	bluebanana \
	brightness \
	burn \
	chromakey \
	chromakeyhsv \
	colorbalance \
	colorspace \
	compressor \
	crossfade \
	deinterlace \
	delayaudio \
	delayvideo \
	denoise \
	denoisefft \
	denoiseseltempavg \
	denoisevideo \
	despike \
	diffkey \
	dissolve \
	dot \
	downsample \
	fieldframe \
	flash \
	flip \
	framefield \
	freeverb \
	freezeframe \
	gain \
	gamma \
	gradient \
	histogram \
	holo \
	huesaturation \
	interpolatevideo \
	invertaudio \
	invertvideo \
	irissquare \
	ivtc \
	level \
	linearblur \
	loopaudio \
	loopvideo \
	motion \
	motionblur \
	normalize \
	nullaudio \
	nullaudtrans \
	nullrtaudio \
	nullrtvideo \
	nullvideo \
	nullvidtrans \
	oilpainting \
	overlay \
	overlayaudio \
	parametric \
	perspective \
	pitch \
	polar \
	radialblur \
	reframe \
	reframert \
	reroute \
	reverb \
	reverseaudio \
	reversevideo \
	rgb601 \
	rotate \
	scale \
	shapewipe \
	sharpen \
	shiftinterlace \
	slide \
	spectrogram \
	swapchannels \
	synthesizer \
	threshold \
	timeavg \
	timefront \
	timestretch \
	titler \
	translate \
	unsharp \
	videoscope \
	wave \
	whirl \
	wipe \
	yuv \
	zoomblur

AUTOMAKE_OPTIONS=foreign

EXTRA_DIST = 
